# coen424-f25-a2

./: Dockerfile  compose.debug.yaml  docker-compose.dev.yml  docker-compose.yml
api-gateway/src/: main.py
event-system/: Dockerfile
event-system/src/: handlers.py  rabbit.py
order-service/: Dockerfile  pyproject.toml
order-service/src/: main.py  order_db.py  schemas.py
user-service-v2/: pyproject.toml
user-service-v2/src/: main.py  rabbit.py  schemas.py  user_db.py
