[project]
name = "order-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.122.0",
    "motor>=3.7.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "uvicorn>=0.38.0",
]
